--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,127 +4,21 @@ body {
   box-sizing: border-box;
 }
 
-
-
 .main-content {
-  margin-left: 110px;
-  padding: 20px;
+  margin-left: 80px;
 }
+
 /* Media query for mobile view */
 @media (max-width: 768px) {
   .main-content {
     margin-left: 0;
-    padding: 20px;
+    padding: 0;
   }
   }
 
-/* Add to your existing Sidebar.css or create a new CSS file */
-.counters {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
-}
-
-.counters {
-  display: flex;
-  /* justify-content: space-around; */
-  align-items: center;
-  text-align: center;
-  flex-wrap: wrap;
-  gap: 5px;
-  padding: 15px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-}
-
-.counters > div {
-  flex: 1;
-  border: 2px solid #000;
-  padding: 20px 20px;
-  border-radius: 5px;
-}
-.counters h3 {
-  margin-bottom: 10px;
-}
-
-/* Table */
-
-.projectTable{
-  text-transform: capitalize;
-}
 
 
-.topTable{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
 
-.admin-users-section {
-  padding: 2rem;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  overflow: hidden;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-}
-.table {
-  color: #000;
-}
-
-th,
-td {
-  padding: 15px;
-  background-color: rgba(255, 255, 255, 0.2);
-  color: #fff;
-  text-align: center;
-}
-
-/* th {
-	text-align: center;
-} */
-
-thead {
-  th {
-    background-color: #55608f;
-  }
-}
-
-tbody {
-  text-transform: capitalize;
-  td {
-    &:hover {
-      background-color: rgba(255, 255, 255, 0.3);
-    }
-  }
-  td {
-    position: relative;
-    &:hover {
-      &:before {
-        content: "";
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: -9999px;
-        bottom: -9999px;
-        /* background-color: rgba(255,255,255,0.2); */
-        z-index: -1;
-      }
-    }
-  }
-}
-
-@media (max-width: 768px) {
-  thead {
-    th {
-      display: none;
-    }
-  }
-  }
 
 /* Card Css */
 .contactContainer {
@@ -151,6 +45,12 @@ tbody {
 
 /* Project.css */
 
+.topProjectContainer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 /* Container styles to center the content */
 .container {
   display: flex;
@@ -168,27 +68,26 @@ tbody {
   margin-bottom: 20px;
 }
 
-/* Styles for the pagination */
+/* Add this to your existing CSS file or create a new one */
+
 .pagination-container {
   display: flex;
   justify-content: center;
-  width: 100%; /* Ensure the pagination takes the full width */
+  margin-top: 20px;
 }
 
 .pagination {
-  display: flex;
   list-style: none;
-  padding: 0;
-  margin: 20px 0;
+  display: flex;
+  gap: 5px;
 }
 
 .pagination li {
   cursor: pointer;
-  margin: 0 5px;
-  padding: 8px 12px;
-  border: 1px solid #007bff;
-  color: #007bff;
-  border-radius: 4px;
+  padding: 5px 10px;
+  background-color: #eee;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 .pagination li.active {
@@ -219,7 +118,7 @@ button:hover {
   border-radius: 4px;
   margin-right: 10px;
 }
-.projectNamet {
+.projectName {
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
