--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -7,19 +7,91 @@
   justify-content: center;
   background-image: url(../../assets/login-bg-1.svg);
   background-repeat: no-repeat;
- background-size: 100%;
- background-position: top;
+  background-size: 100%;
+  background-position: top;
+  position: relative;
 }
 
 .loginContainer {
   width: 400px;
-  padding: 20px;
+  padding: 40px;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.forgetPass{
+.forgetPass {
+  border: none;
   float: right;
   cursor: pointer;
+}
+.loginTop, .loginLogo{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: #fff;
+}
+
+/* Media query for mobile view */
+@media (max-width: 768px) {
+  .loginSection{
+    width: 100vw;
+    height: 100vh;
+  }
+  .logo{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    right: 50%;
+  }
+  .logo > img{
+    width: 150px;
+    height: 100px;
+  }
+  .logo span{
+    display: none;
+  }
+
+  .loginContainer {
+    width: 100%;
+    font-size: 1.4rem;
+    height: 50%;
+    align-items: flex-start;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    box-shadow: none;
+  }
+
+  .loginContainer > div {
+    width: 100%;
+    height: 100%;
+  }
+
+  .loginContainer > div input {
+    width: 100%;
+    padding: 5px 10px;
+    box-sizing: border-box;
+    font-size: 1.6rem; /* Adjust the font size as needed */
+  }
+
+  .loginContainer > h5 {
+    font-size: 1.8rem;
+  }
+  .loginContainer > div button:nth-child(1) {
+    font-size: 1.5rem;
+    width: 100%;
+    border-radius: 30px;
+    padding: 10px 40px;
+}
+
+
+
+.loginLogo{
+  position: absolute;
+  top: 5%;
+  right: 0%;
+  width: 100%;
+}
 }
