--- a/client/src/components/ProjectTable/projecttable.css
+++ b/client/src/components/ProjectTable/projecttable.css
@@ -1,105 +1,323 @@
 /* Table */
 
-.projectTable{
-    width: 95%;
-    text-transform: capitalize;
+.projectTable,
+.table-responsive {
+  width: 100%;
+  height: 100%;
+  text-transform: capitalize;
+}
+
+.topTable {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.projectButtons {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+.table {
+  color: #000;
+}
+
+th,
+td {
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #fff;
+  text-align: start;
+}
+
+.desktop_name{
+  display: flex;
+  flex-direction: column;
+}
+
+thead > tr {
+  th {
+    color: #3f3f3f;
+    font-family: "Nunito Sans";
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 19px;
   }
-  
-  
-  .topTable{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  
-  .admin-users-section {
-    padding: 2rem;
-  }
-  
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    overflow: hidden;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  }
-  .table {
-    color: #000;
-  }
-  
-  th,
+}
+
+tbody {
+  text-transform: capitalize;
+  align-items: flex-start;
   td {
-    padding: 15px;
-    background-color: rgba(255, 255, 255, 0.2);
-    color: #fff;
-    text-align: start;
-  }
-  
-  /* th {
-      text-align: center;
-  } */
-  
-  thead {
-    th {
-      background-color: #6975ad;
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.3);
     }
   }
-  
-  tbody {
-    text-transform: capitalize;
-    align-items: flex-start;
-    td {
-      &:hover {
-        background-color: rgba(255, 255, 255, 0.3);
+  td {
+    position: relative;
+    &:hover {
+      &:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: -9999px;
+        bottom: -9999px;
+        /* background-color: rgba(255,255,255,0.2); */
+        z-index: -1;
       }
     }
-    td {
-      position: relative;
-      &:hover {
-        &:before {
-          content: "";
-          position: absolute;
-          left: 0;
-          right: 0;
-          top: -9999px;
-          bottom: -9999px;
-          /* background-color: rgba(255,255,255,0.2); */
-          z-index: -1;
+  }
+}
+
+.desktop-table td {
+  color: #3f3f3f;
+  font-family: "Nunito Sans";
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 19px;
+}
+
+.tableStatus {
+  color: #00284c;
+  font-family: "Nunito Sans";
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0;
+  line-height: 19px;
+}
+.tableProjectName {
+  height: 22px;
+  width: 228px;
+  color: #414950;
+  font-family: "Nunito Sans";
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 0.44px;
+  line-height: 22px;
+}
+
+.table_date {
+  height: 19px;
+  width: 187px;
+  color: #6b6b6b;
+  font-family: "Nunito Sans";
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 19px;
+}
+.card_date {
+  height: 19px;
+  width: 186px;
+  color: #6b6b6b;
+  font-family: "Nunito Sans";
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 19px;
+}
+/* Buttons css */
+.btn-group {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.btns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 4px 20px;
+  border-radius: 20px;
+  color: #025aab;
+  background-color: #fff;
+  border: 1px solid #025aab;
+}
+
+.btns-start {
+  color: #fff;
+  background-color: #025aab;
+}
+.btns-start:hover {
+  color: #025aab;
+  background-color: #fff;
+  border: 1px solid #025aab;
+}
+.btns-close:hover,
+.btns-cancel:hover {
+  color: #fff;
+  background-color: #025aab;
+  border: 1px solid #025aab;
+}
+
+/* Pagination Css */
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination {
+  list-style: none;
+  padding: 0;
+  display: flex;
+}
+
+.pagination li {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #3498db;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.pagination li.active {
+  background-color: #2980b9;
+}
+
+.pagination li.disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.pagination li:hover {
+  background-color: #2980b9;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+  .projectTable {
+    width: 100%;
+    height: 100%;
+  }
+  thead {
+    th {
+      display: none;
+    }
+  }
+
+
+  .mobile_container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column-reverse;
+    gap: 1rem;
+    background-color:#F3F5F7;
+
+    .mobile_card {
+      width: 100%;
+      height: 100%;
+      margin-bottom: 1rem;
+      border-radius: 10px;
+      background-color: #ffffff;
+      box-shadow: 0 7px 18px 0 rgba(2, 118, 179, 0.13);
+      display: flex;
+      gap: 2rem;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: column;
+
+      .mobile_content {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: column;
+
+        .card_content {
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+
+          .card_name {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+
+            .card_title {
+              color: #414950;
+              font-family: "Nunito Sans";
+              font-size: 16px;
+              font-weight: bold;
+              letter-spacing: 0.44px;
+              line-height: 22px;
+            }
+
+            .card_date {
+              color: #6b6b6b;
+              font-family: "Nunito Sans";
+              font-size: 14px;
+              letter-spacing: 0;
+              line-height: 19px;
+            }
+          }
+
+          .card_text {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.4rem;
+
+            .card_soft_title {
+              color: #414950;
+              font-family: "Nunito Sans";
+              font-size: 16px;
+              font-weight: bold;
+              letter-spacing: 0.44px;
+              line-height: 22px;
+            }
+
+            .card_status {
+              top: 5%;
+              right: 5%;
+              position: absolute;
+              color: #00284c;
+              font-family: "Nunito Sans";
+              font-size: 16px;
+              font-weight: bolder;
+              letter-spacing: 0;
+              line-height: 19px;
+              text-align: right;
+            }
+          }
         }
       }
     }
   }
-
-  .tableStatus, .tableProjectName{
-    font-weight: bold;
-  }
   
-  @media (max-width: 768px) {
-    thead {
-      th {
-        display: none;
-      }
-    }
+  .btn-group {
+    display: flex;
+    gap: 2rem;
+    width: 100%;
 
-    .card{
-      position: relative;
+    .btns{
+      padding: 8px 24px;
     }
-    .card-text > .status{
-      position: absolute;
-      top: 3%;
-      right: 5%;
-    }
-
-    .card .card-title{
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
-    }
-    .card .card-text{
-      font-size: 1.3rem;
-    }
-
-    .btn-group {
-      width: 100%;
-    }
-    }
+  }
+}
