--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -1,97 +1,336 @@
 .loginSection {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
-  align-items: center;
   flex-direction: column;
-  justify-content: center;
-  background-image: url(../../assets/login-bg-1.svg);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: top;
   position: relative;
 }
 
-.loginContainer {
-  width: 400px;
-  padding: 40px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+.loginTopContainer {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(../../assets/login-bg-1.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+
+  .ovalContainer {
+    display: none;
+  }
+
+  .loginContent1 {
+    display: none;
+  }
 }
 
-.forgetPass {
-  border: none;
-  float: right;
-  cursor: pointer;
-}
-.loginTop, .loginLogo{
+.loginBottomContainer {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  .loginContent2 {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    gap: 1rem;
     color: #fff;
+    margin-bottom: 2rem;
+  }
+}
+
+.formContainer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 422px;
+  width: 410px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  box-shadow: 0 7px 18px 0 rgba(2, 118, 179, 0.13);
+}
+
+.emailContainer {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+.logo {
+  height: 76px;
+  width: 85px;
+}
+.online-project-manag {
+  height: 22px;
+  width: 199px;
+  color: #ffffff;
+  font-family: "Nunito Sans";
+  font-size: 16px;
+  letter-spacing: 0;
+  line-height: 22px;
+}
+.login-to-get-started {
+  height: 27px;
+  width: 190px;
+  color: #3f3f3f;
+  font-family: "Nunito Sans";
+  font-size: 20px;
+  letter-spacing: 0;
+  line-height: 27px;
+}
+.emailInput {
+  padding: 10px;
+  box-sizing: border-box;
+  height: 48px;
+  width: 337px;
+  border: 1px solid #979797;
+  border-radius: 6px;
+}
+
+.forgot-password {
+  width: 80%;
+  text-align: right;
+  height: 14px;
+  width: 105px;
+  color: #025aab;
+  font-family: "Work Sans";
+  font-size: 12px;
+  letter-spacing: 0;
+  line-height: 14px;
+}
+.shape {
+  height: 14.92px;
+  width: 24px;
+  background-color: #5a5b5b;
+}
+.shape-1 {
+  height: 9.26px;
+  width: 9.49px;
+  background-color: #5a5b5b;
+}
+
+.email {
+  height: 19px;
+  width: 34px;
+  color: #767676;
+  font-family: "Nunito Sans";
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 19px;
+}
+
+.passwordContainer {
+  display: flex;
+  flex-direction: column;
+}
+.passwordInput {
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 40px;
+  width: 337px;
+  border: 0;
+  outline: 0;
+}
+.passwordInput:focus {
+  outline: none !important;
+}
+
+.password {
+  height: 19px;
+  width: 63px;
+  color: #767676;
+  font-family: "Nunito Sans";
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 19px;
+}
+.eye-1 {
+  height: 20px;
+  width: 40px;
+}
+
+.rectangle {
+  cursor: pointer;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  height: 36px;
+  width: 169px;
+  border-radius: 18px;
+  background-color: #035fb2;
+}
+.rectangle-copy {
+  padding: 10px;
+  box-sizing: border-box;
+  height: 48px;
+  width: 337px;
+  border: 1px solid #979797;
+  border-radius: 6px;
+}
+
+.forgot-password {
+  width: 100%;
+  margin-top: 10px;
+  text-align: right;
+  color: #3498db;
+  cursor: pointer;
+}
+
+.login {
+  height: 22px;
+  width: 40px;
+  color: #ffffff;
+  font-family: "Nunito Sans";
+  font-size: 16px;
+  letter-spacing: 0;
+  line-height: 22px;
+}
+
+.loginLogo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #fff;
 }
 
 /* Media query for mobile view */
 @media (max-width: 768px) {
-  .loginSection{
-    width: 100vw;
-    height: 100vh;
-  }
-  .logo{
-    width: 100%;
-    position: absolute;
-    top: 0;
-    right: 50%;
-  }
-  .logo > img{
-    width: 150px;
-    height: 100px;
-  }
-  .logo span{
-    display: none;
-  }
-
-  .loginContainer {
-    width: 100%;
-    font-size: 1.4rem;
-    height: 50%;
-    align-items: flex-start;
+  .loginSection {
+    position: static;
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    flex-direction: column;
-    box-shadow: none;
+
+    .loginTopContainer {
+      background-size: cover;
+      background-position: left;
+      height: 430px;
+
+      .ovalContainer {
+        display: block;
+        position: absolute;
+        top: -8%;
+        right: -18%;
+
+        img {
+          width: 350px;
+          height: 450px;
+        }
+      }
+
+      .loginContent1 {
+        z-index: 9999;
+        font-size: 18px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        color: #ffff;
+
+        .logo {
+          height: 140px;
+          width: 118px;
+        }
+        .online-project-manag {
+          color: #ffffff;
+          font-family: "Nunito Sans";
+          font-size: 16px;
+          letter-spacing: 0;
+          line-height: 22px;
+        }
+      }
+    }
+
+    .loginBottomContainer {
+      width: 100%;
+      height: 100%;
+      position: static;
+      top: 0%;
+      left: 0%;
+      transform: translate(0%, 0%);
+
+      .loginContent2 {
+        display: none;
+      }
+
+      .formContainer {
+        height: 480px;
+        padding: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+
+        .login-to-get-started {
+          width: 100%;
+          font-weight: bold;
+          font-size: 25px;
+          text-align: left;
+        }
+        .emailContainer {
+          width: 100%;
+          gap: 0.5rem;
+          font-size: 17px;
+
+          .email {
+            font-size: 17px;
+          }
+          .emailInput {
+            box-sizing: border-box;
+            height: 60px;
+            width: 100%;
+            border: 1px solid #979797;
+            border-radius: 6px;
+          }
+        }
+
+        .passwordContainer {
+          width: 100%;
+          font-size: 16px;
+          gap: 0.5rem;
+
+          .password {
+            font-size: 17px;
+          }
+          .passwordInput {
+            height: 60px;
+            width: 100%;
+            border-top: 1px solid #979797;
+            border-bottom: 1px solid #979797;
+
+            .eye-1 {
+              height: 24px;
+              width: 40px;
+            }
+          }
+
+          .forgot-password {
+            color: #025aab;
+            font-family: "Work Sans";
+            font-size: 15px;
+            letter-spacing: 0;
+            line-height: 6px;
+          }
+        }
+        .rectangle {
+          height: 40px;
+          width: 100%;
+        }
+      }
+    }
   }
-
-  .loginContainer > div {
-    width: 100%;
-    height: 100%;
-  }
-
-  .loginContainer > div input {
-    width: 100%;
-    padding: 5px 10px;
-    box-sizing: border-box;
-    font-size: 1.6rem; /* Adjust the font size as needed */
-  }
-
-  .loginContainer > h5 {
-    font-size: 1.8rem;
-  }
-  .loginContainer > div button:nth-child(1) {
-    font-size: 1.5rem;
-    width: 100%;
-    border-radius: 30px;
-    padding: 10px 40px;
-}
-
-
-
-.loginLogo{
-  position: absolute;
-  top: 5%;
-  right: 0%;
-  width: 100%;
-}
 }
